docs/4.0/templates.md
---
layout: post
title: templates
tag: 4.0
---
# Templates

- [Controller Layouts](#controller-layouts)
- [Blade Templating](#blade-templating)
- [Other Blade Control Structures](#other-blade-control-structures)

<a name="controller-layouts"></a>
## Controller Layouts

One method of using templates in Laravel is via controller layouts. By specifying the `layout` property on the controller, the view specified will be created for you and will be the assumed response that should be returned from actions.

**Defining A Layout On A Controller**

	class UserController extends BaseController {

		/**
		 * The layout that should be used for responses.
		 */
		protected $layout = 'layouts.master';

		/**
		 * Show the user profile.
		 */
		public function showProfile()
		{
			$this->layout->content = View::make('user.profile');
		}

	}

<a name="blade-templating"></a>
## Blade Templating

Blade is a simple, yet powerful templating engine provided with Laravel. Unlike controller layouts, Blade is driven by _template inheritance_ and _sections_. All Blade templates should use the `.blade.php` extension.

**Defining A Blade Layout**

	<!-- Stored in app/views/layouts/master.blade.php -->

	<html>
		<body>
			@section('sidebar')
				This is the master sidebar.
			@show

			<div class="container">
				@yield('content')
			</div>
		</body>
	</html>

**Using A Blade Layout**

	@extends('layouts.master')

	@section('sidebar')
		@parent

		<p>This is appended to the master sidebar.</p>
	@stop

	@section('content')
		<p>This is my body content.</p>
	@stop

Note that views which `extend` a Blade layout simply override sections from the layout. Content of the layout can be included in a child view using the `@parent` directive in a section, allowing you to append to the contents of a layout section such as a sidebar or footer.

Sometimes, such as when you are not sure if a section has been defined, you may wish to pass a default value to the `@yield` directive. You may pass the default value as the second argument:

	@yield('section', 'Default Content');

<a name="other-blade-control-structures"></a>
## Other Blade Control Structures

**Echoing Data**

	Hello, {% raw %} {{ $name }} {% endraw %}.

	The current UNIX timestamp is {% raw %} {{ time() }} {% endraw %}.

If you need to display a string that is wrapped in curly braces, you may escape the Blade behavior by prefixing your text with an `@` symbol:

**Displaying Raw Text With Curly Braces**

	@{% raw %} {{ This will not be processed by Blade }} {% endraw %}

Of course, all user supplied data should be escaped or purified. To escape the output, you may use the triple curly brace syntax:

	Hello, {% raw %} {{{ $name }} {% endraw %}}.

> **Note:** Be very careful when echoing content that is supplied by users of your application. Always use the triple curly brace syntax to escape any HTML entities in the content.

**If Statements**

	@if (count($records) === 1)
		I have one record!
	@elseif (count($records) > 1)
		I have multiple records!
	@else
		I don't have any records!
	@endif

	@unless (Auth::check())
		You are not signed in.
	@endunless

**Loops**

	@for ($i = 0; $i < 10; $i++)
		The current value is {% raw %} {{ $i }} {% endraw %}
	@endfor

	@foreach ($users as $user)
		<p>This is user {% raw %} {{ $user->id }} {% endraw %}</p>
	@endforeach

	@while (true)
		<p>I'm looping forever.</p>
	@endwhile

**Including Sub-Views**

	@include('view.name')
	
You may also pass an array of data to the included view:
	
	@include('view.name', array('some'=>'data'))
	
**Overwriting Sections**

By default, sections are appended to any previous content that exists in the section. To overwrite a section entirely, you may use the `overwrite` statement:
	
	@extends('list.item.container')

	@section('list.item.content')
		<p>This is an item of type {% raw %} {{ $item->type }} {% endraw %}</p>
	@overwrite

**Displaying Language Lines**

	@lang('language.line')

	@choice('language.line', 1);

**Comments**

	{% raw %} {{-- This comment will not be in the rendered HTML --}} {% endraw %}
